# lidar-potree

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  traefik.docker.compose.yml
project/: uwsgi.ini  uwsgi_params
project/config/: asgi.py  celery.py  urls.py  ws_urls.py  yasg.py
project/config/consumers/: __init__.py  general_consumer.py
project/config/exceptions/: __init__.py  object_not_found_exception.py
project/config/instances/: __init__.py  minio.py
project/config/middlewares/: __init__.py  ws_auth_widdleware.py
project/config/openapi/: __init__.py  openapi_filters.py  tags_config.py
project/config/serializers/: __init__.py  base_bulk_serializer.py
project/config/tasks/: reset_outstanding_jwt_tokens.py  send_ws_message.py
project/config/types/: __init__.py
project/config/utils/: __init__.py  read_settings_json_file.py  send_ws_message_to_general_layer.py
project/las_files/: apps.py  models.py  serializers.py  urls.py  views.py
project/las_files/migrations/: 0001_initial.py  0002_alter_lasfilemodel_name.py  0003_alter_lasfilemodel_name.py  0004_alter_lasfilemodel_name.py  0005_alter_lasfilemodel_name.py  0006_alter_lasfilemodel_name.py  0007_alter_lasfilemodel_remote_download_url.py
project/las_files/services/: __init__.py  download_las_to_temp_file.py  split_las.py  upload_local_directory_to_minio.py  use_potree_converter.py
project/templates/: email_code.html  email_confirm.html
scripts/: entrypoint.sh
(+8 files in other folders)
